[CHORE]:bottomnavigationbar 코드 수정

--- a/client/src/components/Start.css
+++ b/client/src/components/Start.css
@@ -16,4 +16,17 @@
     font-size:20px;
   }
 
+  .chick-container{
+    position:fixed;
+    bottom: 0;
+    left: 50%;  /* 중앙 정렬*/
+    transform: translateX(-50%); /*정확한 중앙 정렬을 위해서 작성*/
+    z-index: 100; /*다른 요소들 위에 표시되도록 하기 위해서 작성*/
+  }
+
+  .chick-container img{
+    width: 100px;
+    height: auto;
+  }
+
   
