[FIX]페이지 이동 시 이동한 페이지의 내용이 보이지 않던 오류 수정

--- a/client/src/components/Start.css
+++ b/client/src/components/Start.css
@@ -1,32 +1,28 @@
-.App {
-    text-align: center;
-  }
 
-  body{
-    font-family: 'nanumsquare';
-  }
+.start-page {
+  position: relative;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  background-color: rgb(183, 130, 59);
+}
 
-  .black-nav{
-    background: black;
-    width: 100%;
-    display: flex;
-    color: white;
-    padding: 20px;
-    font-weight: 600;
-    font-size:20px;
-  }
+.chick-animation {
+  animation: jumpUp 0.5s ease forwards;
+}
 
-  .chick-container{
-    position:fixed;
-    bottom: 0;
-    left: 50%;  /* 중앙 정렬*/
-    transform: translateX(-50%); /*정확한 중앙 정렬을 위해서 작성*/
-    z-index: 100; /*다른 요소들 위에 표시되도록 하기 위해서 작성*/
+@keyframes jumpUp {
+  0% {
+    transform: translateY(100%);
   }
+  50% {
+    transform: translateY(-30%);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
 
-  .chick-container img{
-    width: 100px;
-    height: auto;
-  }
 
   
