--- a/client/src/components/Start.css
+++ b/client/src/components/Start.css
@@ -1,4 +1,3 @@
-
 .start-page {
   position: relative;
   height: 100vh;
@@ -6,6 +5,7 @@
   justify-content: center;
   align-items: flex-end;
   background-color: rgb(183, 130, 59);
+  overflow: hidden; /* 화면 밖으로 나가는 물방울 숨김 처리 */
 }
 
 .chick-animation {
@@ -24,5 +24,25 @@
   }
 }
 
+@keyframes dropAnimation {
+  0% {
+    transform: translateY(0px);
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(500px); /* 물방울이 떨어지는 간격 조정 */
+    opacity: 0;
+  }
+}
 
-  
+.drop {
+  width: 10px;
+  height: 10px;
+  background-color: blue; /* 물방울 색상 추가 */
+  border-radius: 50%;
+  position: absolute;
+  top: 0;
+  animation: dropAnimation 2s linear infinite; /* 애니메이션 지속 시간 및 반복 설정 */
+}
+
+
