물웅덩이 윗부분 빈공간을 채우기 위한 사각형 배치

--- a/client/src/components/Start.css
+++ b/client/src/components/Start.css
@@ -6,6 +6,30 @@
   src: url("../fonts/continuous.ttf");
 }
 
+/*로고 관련 css*/
+.logo {
+  font-family: "Continuous";
+  font-size: 450%; /* 로고의 크기 조절 */
+  color: rgb(119, 73, 73); /* 로고의 색상 */
+  position: fixed; /* 로고의 위치를 절대적으로 설정 */
+  top: 50%;
+  bottom: 10%;
+  left: 50%;
+  right: 15%;
+  transform: translate(-50%,-50%); /* 정확한 중앙 정렬을 위해 위치 조정 */
+  z-index: 20; /* 물방울보다 상위에 위치하도록 z-index 설정 */
+  animation: fadeIn 3s ease-in-out 1s forwards;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 
 .start-page {
   position: relative;
@@ -64,32 +88,6 @@
   
 
 
-/*로고 관련 css*/
-.logo {
-  font-family: "Continuous";
-  font-size: 450%; /* 로고의 크기 조절 */
-  color: rgb(119, 73, 73); /* 로고의 색상 */
-  position: fixed; /* 로고의 위치를 절대적으로 설정 */
-  top: 50%;
-  bottom: 10%;
-  left: 50%;
-  right: 15%;
-  transform: translate(-50%,-50%); /* 정확한 중앙 정렬을 위해 위치 조정 */
-  z-index: 20; /* 물방울보다 상위에 위치하도록 z-index 설정 */
-  animation: fadeIn 3s ease-in-out 1s forwards;
-}
-
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-
-
 /*물울덩이 관련 css*/
 
 /* WaveAnimation.css */
@@ -107,9 +105,10 @@
   position: fixed;
   width: 100%;
   top: 0;
-  right: 0;
+  left: 0;
   height: 250px;
   transform: translate3d(0, 0, 0);
+  z-index: 10; 
   animation: wave 5s linear infinite, swell 10s ease-in-out infinite;
 }
 
@@ -123,5 +122,14 @@
   50% { transform: translate3d(0, 5px, 0); }
 }
 
+.puddle-top-box {
+  position: absolute;
+  top: 0; 
+  left: 0;
+  right: 0;
+  height: 5px; 
+  background-color: #afd7fd; 
+  z-index: 1; 
+}
 
 
