--- a/client/src/components/Start.css
+++ b/client/src/components/Start.css
@@ -1,5 +1,5 @@
-/* Start.css */
 
+/* 레이아웃 관련 css */
 .start-page {
   position: relative;
   width: 100vw;
@@ -16,21 +16,21 @@
   width: 100%;
   height: 30%; /* 전체 화면의 절반 */
   overflow: hidden; /* 내용이 넘칠 경우 숨김 처리 */
-  background-color:red; 
+  background-color:white; 
 
 }
 .middle-section{
   width: 100%;
   height: 30%; /* 전체 화면의 절반 */
   overflow: hidden; /* 내용이 넘칠 경우 숨김 처리 */
-  background-color:rgb(92, 188, 79); 
+  background-color:white; 
 
 }
 .bottom-section{
   width: 100%;
   height: 40%; /* 전체 화면의 절반 */
   overflow: hidden; /* 내용이 넘칠 경우 숨김 처리 */
-  background-color: #3498db; 
+  background-color: white; 
 }
 
 
@@ -91,7 +91,7 @@
 
 /*물울덩이 관련 css*/
 .ocean {
-  height: 100%;
+  height: 25%;
   width: 100%;
   position: absolute;
   top: 0;
@@ -131,30 +131,13 @@
   z-index: 1; 
 }
 
-
-
-/* 알약  */
-.pill {
-  position: relative;
-  width: 10%; 
-  transition: opacity 0.5s ease; 
-  z-index: 100;
-}
-
-/* 각 알약 이미지 위치 조정 예시 */
+/* 알약 관련 css */
 .pill1 { left: 10px; top: 500px; }
-.pill2 { left: 160px; top: 400px; }
-.jam { left: 220px; top: 100px; }
+.pill2 { left: 10px; top: 450px; }
+.pill3 { left: 30px; top: 450px; }
+.pill4 { left: 20px; top: 500px; }
 
-/* 보이지 않는 상태의 스타일 */
-.hidden {
-  opacity: 0;
-}
 
-/* 나타난 상태의 스타일 */
-.visible {
-  opacity: 1;
-}
 
 
 
