--- a/client/src/components/MyPage/MyPage.css
+++ b/client/src/components/MyPage/MyPage.css
@@ -13,14 +13,16 @@
   }
   
   .profile{
-    text-align: right;
+    position:relative;
+    top: 10px;
+  
     height: 250px;
     padding-right: 5px;
     border-bottom: 3px solid gray;
   }
   
   
-  .medicine_title{ 
+  .medicine_title{
     text-align: left;
     padding-left: 20px;
     border-bottom: 3px solid gray;
@@ -44,4 +46,8 @@
     border: none;
     cursor: pointer;
     background-color: transparent;
+  }
+
+  .text_setting{
+    margin-left: 300px;
   }
