--- a/client/src/components/InfoPage/InfoPage_2.css
+++ b/client/src/components/InfoPage/InfoPage_2.css
@@ -1,13 +1,13 @@
-.pillImage{
+.background{
     display: flex;
-    background-image: url('../../../public/pillImage.png');
-    width: 30%;
-    height: 17%;
+    background-image: url('../../../public/info2_background.png');
+    width: 100%;
+    height: 100%;
     background-repeat: no-repeat;
     background-size: 100%;
     position: absolute;
-    top: 90px; /* 원하는 위치로 조정 */
-    left: 20%;
+    top: 10px; /* 원하는 위치로 조정 */
+    left: 50%;
      transform: translateX(-50%);
 }
 
@@ -15,20 +15,46 @@
     text-align: center;
 }
 
-.bokyongbub{
-    display: flex;
-    background-image: url('../../../public/bokyongbub.png');
-    width: 100%;
-    height: 17%;
-    background-repeat: no-repeat;
-    background-size: 100%;
+
+
+  .buttons{
+    position: absolute;
+    top: 360px; /* 원하는 위치로 조정 */
+    left: 40%;
+     transform: translateX(-50%);
+
+     display: flex; /*가로로 배치*/
+    
+     
+  }
+
+.morning,
+.lunch,
+.dinner {
+    border-color: '#87CEEB'; /* 테두리 제거 */
+    margin-right: 10px; /* 버튼 사이의 간격 조절 */
+    margin-left: 10px;
 }
 
-.edge{
-    display: flex;
-    background-image: url('../../../public/edge.png');
-    width: 100%;
-    height: 100%;
-    background-repeat: no-repeat;
-    background-size: 100%;
+.checkbox{
+
+    position: absolute;
+    top: 420px; /* 원하는 위치로 조정 */
+    left: 50%;
+     transform: translateX(-50%);
+     display: flex;
+
+    
+
 }
+
+.after,
+.before{
+    margin-right: 20px; /* 버튼 사이의 간격 조절 */
+    margin-left: 10px;
+}
+
+.checkbox label {
+    color: #3995b9; /* 원하는 색상으로 변경 */
+  }
+  
