--- a/client/src/components/InfoPage/InfoPage_2.css
+++ b/client/src/components/InfoPage/InfoPage_2.css
@@ -1,14 +1,17 @@
-.background{
+.background2{
     display: flex;
     background-image: url('../../../public/info2_background.png');
     width: 100%;
     height: 100%;
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: 95%;
     position: absolute;
-    top: 10px; /* 원하는 위치로 조정 */
-    left: 50%;
+    top: 60px; /* 원하는 위치로 조정 */
+    left: 53%;
      transform: translateX(-50%);
+}
+.text1 { /*MeddyBaby*/
+    text-align: center;
 }
 
 .text1 { /*MeddyBaby*/
@@ -19,8 +22,8 @@
 
   .buttons{
     position: absolute;
-    top: 360px; /* 원하는 위치로 조정 */
-    left: 40%;
+    top: 390px; /* 원하는 위치로 조정 */
+    left: 49%;
      transform: translateX(-50%);
 
      display: flex; /*가로로 배치*/
@@ -31,7 +34,7 @@
 .morning,
 .lunch,
 .dinner {
-    border-color: '#87CEEB'; /* 테두리 제거 */
+    border-color: '#87CEEB'; /* 테두리 색상 */
     margin-right: 10px; /* 버튼 사이의 간격 조절 */
     margin-left: 10px;
 }
@@ -39,12 +42,10 @@
 .checkbox{
 
     position: absolute;
-    top: 420px; /* 원하는 위치로 조정 */
+    top: 480px; /* 원하는 위치로 조정 */
     left: 50%;
      transform: translateX(-50%);
      display: flex;
-
-    
 
 }
 
@@ -58,3 +59,11 @@
     color: #3995b9; /* 원하는 색상으로 변경 */
   }
   
+.timeset{
+    position: absolute;
+    top: 66%;
+    left: 16%;
+    color: #3995b9;
+    
+
+}
