[CHORE]페이지index 값에 따라 이미지 index 값도 변경하여 페이지에 맞는 이미지 나타나도록 구현

--- a/client/src/components/mainPage/Guidebook.css
+++ b/client/src/components/mainPage/Guidebook.css
@@ -38,6 +38,15 @@
     cursor: pointer;
   }
   
+  .first{
+    position: absolute;
+    align-items: center;
+    top: 100;
+    width: 300px;
+    
+  }
+
+
   .buttonGroup {
     display: flex;
     justify-content: space-between;
