--- a/client/src/components/mainPage/Guidebook.css
+++ b/client/src/components/mainPage/Guidebook.css
@@ -15,7 +15,7 @@
         height: 100%; /* 전체 화면의 절반 */
         top: 20px;
         
-        background-color: rgb(170, 112, 112); 
+        background-color: beige; 
         background-image: url('../image/what.jpeg');
         background-repeat: no-repeat;
         background-size: contain;
@@ -27,11 +27,11 @@
       
 
   .middle-section{
-    width: 65%;
-    height: 60%; /* 전체 화면의 절반 */
+    width: 60%;
+    height: 50%; /* 전체 화면의 절반 */
     overflow: hidden; /* 내용이 넘칠 경우 숨김 처리 */
     background-color:burlywood; 
-    margin-left: 40px; /* 왼쪽 여백 추가 */
+    margin-left: 50px; /* 왼쪽 여백 추가 */
   
   }
   
@@ -45,29 +45,66 @@
     max-width: 90%; /* 화면 크기에 따라 최대 폭 제한 */
     overflow-y: auto;
   }
-  
+  /*사용설명서 텍스트*/
   h2 {
-    margin-top: 35px; /* 위쪽 여백 추가 */
+    margin-top: 25px; /* 위쪽 여백 추가 */
     margin-left: 20px; /* 왼쪽 여백 추가 */
     text-align: center;
       
   }
-
-  .container {
-    display: flex; /* Flexbox 사용 */
-    align-items: center; /* 세로 중앙 정렬 */
-    margin-left: 30px; /* 왼쪽 여백 추가 */
+  .on{
+    font-family: "on";
+    font-size:40px ;
+  color: rgb(119, 73, 73); /* 로고의 색상 */
   }
   
+
+/* Flexbox를 사용하여 세로 중앙 정렬 */
+.vertical-align {
+  width: 100%;
+  height: 100%;
+  display: flex; /* Flexbox 사용 */
+  flex-direction: column; /* 자식 요소들을 세로로 정렬 */
+  align-items: center; /* 가로 중앙 정렬 */
+  justify-content: center; /* 세로 중앙 정렬 */
+}
+
+
+/*꽃이랑 페이지 이름*/
+.container {
+  display: flex; /* Flexbox 사용 */
+  flex-direction: column; /* 자식 요소들을 세로로 정렬 */
+  align-items: center; /* 가로 중앙 정렬 */
+  width: 500px;
+  margin-left: 30px; /* 왼쪽 여백 추가 */
+}
+
+/* 꽃 이미지와 텍스트를 가로로 정렬하기 위한 새로운 클래스 추가 */
+.flower-text-container {
+  display: flex; /* Flexbox 사용 */
+  flex-direction: row; /* 자식 요소들을 가로로 정렬 */
+  align-items: center; /* 세로 중앙 정렬 */
+  justify-content: center; /* 가로 중앙 정렬 */
+}
+  
   .text {
+    font-size: 30px;
+    color: #998f6c;
     margin-right: 200px; /* 텍스트와 이미지 사이의 간격 조정 */
+    font-family: "on";
   }
   .flower {
     width: 20px; /* 이미지의 너비를 10px로 설정 */
     height: 20px; /* 이미지의 높이를 10px로 설정 */
   }
   
+  /*이미지 슬라이드*/
+  .slideImage {
+    width: 300px; /* 너비를 200px로 설정 */
+    height: 380px; /* 높이를 자동으로 조정 */
+  }
   
+  /*엑스 버튼*/
   .closeButton {
     float: right;
     background-color: transparent;
@@ -76,21 +113,16 @@
     cursor: pointer;
   }
   
-  .slideImage {
-    width: 300px; /* 너비를 200px로 설정 */
-    height: auto; /* 높이를 자동으로 조정 */
-    object-fit: cover;
-  }
   
 
-
+ /* 버튼 */
   .buttonGroup {
     display: flex;
     justify-content: space-between;
     margin-top: 20px;
   }
   
-  /* 버튼 스타일 */
+ 
   .button {
     background-color: #007bff;
     color: white;
@@ -109,4 +141,13 @@
   .button:hover {
     background-color: #70869e;
   }
+
+  /*폰트*/
+  @font-face {
+    font-family: "on";
+    font-weight: 50;
+    src: url("../../fonts/온글잎 밑미.ttf");
+  }
+
+  
   
