--- a/client/src/components/mainPage/Guidebook.css
+++ b/client/src/components/mainPage/Guidebook.css
@@ -107,12 +107,21 @@
 
   .tip-container{
     width: 100%;
-    height: 180px;
-    background-color: aqua;
+    height: 400px;
+    background-color: rgb(236, 255, 255);
+    
+  }
+  .notice{
+    color: #b6424e;
+    font-family: "on";
+    font-size: 50px;
   }
 
   .tip{
     top:100;
+    font-family: "on";
+    font-size:30px;
+    color: rgb(119, 73, 73);
   }
   
   /*엑스 버튼*/
