--- a/client/src/components/mainPage/Guidebook.css
+++ b/client/src/components/mainPage/Guidebook.css
@@ -137,10 +137,11 @@
 
   .tip-container{
     width: 100%;
-    height: 400px;
+    height: 360px;
     background-color: beige;
     
     
+ 
   }
   .notice{
     color: #901927;
@@ -163,7 +164,7 @@
     float: right;
     background-color: transparent;
     border: none;
-    font-size: 1.5rem;
+    font-size: 2.5rem;
     cursor: pointer;
   }
 
@@ -178,18 +179,19 @@
   
  
   .button {
-    background-color: #007bff;
-    color: white;
-    border: none;
-    padding: 10px 20px;
+    background-color: #ead899;
+    font-family: "on";
+    font-size:18px;
+    color: black;
+    border: 2px solid black;
+    padding: 10px 15px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
     margin: 4px 2px;
     transition-duration: 0.4s;
     cursor: pointer;
-    border-radius: 5px;
+    border-radius: 30px;
   }
   
   .button:hover {
