--- a/client/src/components/alarmPage/alarmPage.css
+++ b/client/src/components/alarmPage/alarmPage.css
@@ -2,7 +2,35 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
     height: 100vh;
-    background-color: aqua;
   }
+  
+  .top-container{
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    background-color: aquamarine;
+  }
+  .middle-container{
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    background-color: blue;
+
+  }
+  .bottom-container {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    background-color: blueviolet;
+
+  }
+  
+  
