[Feature]애니메이션 원 안에 병아리 배치

--- a/client/src/components/alarmPage/alarmPage.css
+++ b/client/src/components/alarmPage/alarmPage.css
@@ -59,4 +59,10 @@
       transform: scale(1);
     }
   }
+
+  .chick2{
+    width: 40%;
+    padding-left: 130px;
+    padding-top: 100px;
+  }
   
