--- a/client/src/components/alarmPage/alarmPage.css
+++ b/client/src/components/alarmPage/alarmPage.css
@@ -26,7 +26,7 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    background-color: antiquewhite;
+    
     
 
   }
@@ -35,8 +35,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 10%;
-    background-color: brown;
+    width: 50%;
+    
 
   }
   
@@ -45,9 +45,13 @@
     height: 440px;
     border-radius: 50%;
     background-color: rgba(115, 174, 242, 0.863); 
+    background-image: url('../image/6.jpeg');
+    background-size: contain;
     animation: pulse 2s infinite;
     
   }
+
+  
 
   @keyframes pulse {
     0% {
@@ -61,14 +65,30 @@
     }
   }
 
-  .chick2{
-    width: 40%;
-    padding-left: 130px;
-    padding-top: 100px;
+  .chick3{
+    width: 30%;
+    padding-left: 160px;
+    padding-top: 130px;
   }
   
  .wirting-box{
+    padding-top: 5px;
     width: 100%;
-    padding-left: 70px;
-    background-color: aqua;
+    padding-left: 110px;
+   
  }
+
+ .close-button {
+    width: 200px;
+    height: 100px;
+    font-size: 40px;
+    color: #5B5859;
+    font-family: "on";
+    cursor: pointer;
+    padding-left: 20px;
+    background-color: rgba(255, 255, 255, 0.863);
+    background-image: url('../image/cloud2.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    animation: pulse 2s infinite;
+  }
