--- a/client/src/components/mainPage/Main.css
+++ b/client/src/components/mainPage/Main.css
@@ -13,3 +13,11 @@
     flex: 1; /* 모든 컨테이너가 동일한 크기를 가지도록 설정 */
     overflow-y: scroll;
   }
+    
+  .mainpage-middle-container {
+    background-color: #e9ecef;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex: 1; 
+  }
