--- a/client/src/components/mainPage/Main.css
+++ b/client/src/components/mainPage/Main.css
@@ -21,3 +21,11 @@
     align-items: center;
     flex: 1; 
   }
+
+  .mainpage-bottom-container {
+    background-color: #dee2e6; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex: 1; 
+  }
