[Feature]로고 배치 공간 할당

--- a/client/src/components/mainPage/Main.css
+++ b/client/src/components/mainPage/Main.css
@@ -2,16 +2,35 @@
     display: flex;
     flex-direction: column;
     height: 100vh; /* 전체 화면 높이 */
+    overflow-y: auto; /* 섹션 내용이 넘칠 경우 스크롤 생성 */
   }
   
   
   .mainpage-top-container {
     background-color: #f8f9fa; 
     display: flex;
-    justify-content: center;
+    justify-content: left;
     align-items: center;
-    flex: 1; /* 모든 컨테이너가 동일한 크기를 가지도록 설정 */
-    overflow-y: scroll;
+    flex-direction: row; /* 내용 가로 정렬 */
+    height: 50vh; /* 각 섹션의 높이를 화면 높이의 50%로 설정 */
+
+  }
+
+  .logo-modal-container{
+    position:absolute;
+    top :0px;
+    display: flex;
+    flex-direction: row; /* 내용 가로 정렬 */
+    background-color: #22496f; 
+    width: 100%;
+    align-items: center;
+    padding-left: 100px;
+  }
+
+  .logo-sun-container{
+    margin-right: 160px;
+    margin-left: -80px;
+    background-color: #e6a9e5;
   }
     
   .mainpage-middle-container {
@@ -19,7 +38,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    flex: 1; 
+    flex-direction: column; 
+    height: 50vh; 
   }
 
   .mainpage-bottom-container {
@@ -27,5 +47,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    flex: 1; 
+    flex-direction: column; 
+    height: 50vh; 
+  }
+
+  .button-hover {
+    background-color: #925d91;
   }
