--- a/client/src/components/mainPage/Main.css
+++ b/client/src/components/mainPage/Main.css
@@ -12,7 +12,7 @@
     justify-content: left;
     align-items: center;
     flex-direction: row; /* 내용 가로 정렬 */
-    height: 50vh; /* 각 섹션의 높이를 화면 높이의 50%로 설정 */
+    height: 70vh; /* 각 섹션의 높이를 화면 높이의 50%로 설정 */
 
   }
 
@@ -32,6 +32,14 @@
     margin-left: -80px;
     background-color: #e6a9e5;
   }
+
+  .cloud-container{
+    position: relative;
+    bottom: -60px;
+    background-color: #e6a9e5;
+    width: 100%;
+    height: 200px;
+  }
     
   .mainpage-middle-container {
     background-color: #e9ecef;
@@ -39,7 +47,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column; 
-    height: 50vh; 
+    height: 30vh; 
   }
 
   .mainpage-bottom-container {
