--- a/client/src/components/mainPage/Main.css
+++ b/client/src/components/mainPage/Main.css
@@ -5,7 +5,7 @@
     overflow-y: auto; /* 섹션 내용이 넘칠 경우 스크롤 생성 */
   }
   
-  
+  /*화면 상단 요소*/
   .mainpage-top-container {
     background-color: #f8f9fa; 
     display: flex;
@@ -40,7 +40,8 @@
     width: 100%;
     height: 200px;
   }
-    
+
+  /* 화면 중단 요소 */
   .mainpage-middle-container {
     background-color: #e9ecef;
     display: flex;
@@ -50,6 +51,15 @@
     height: 30vh; 
   }
 
+  .bench-container{
+    position:relative;
+    bottom:-15px;
+    background-color: #34506d;
+    width: 100%;
+    height: 150px;
+  }
+
+  /*화면 하단 요소*/
   .mainpage-bottom-container {
     background-color: #dee2e6; 
     display: flex;
