--- a/client/src/components/mainPage/Main.css
+++ b/client/src/components/mainPage/Main.css
@@ -41,6 +41,10 @@
     height: 200px;
   }
 
+  .button-hover {
+    background-color: #925d91;
+  }
+
   /* 화면 중단 요소 */
   .mainpage-middle-container {
     background-color: #e9ecef;
@@ -69,6 +73,17 @@
     height: 50vh; 
   }
 
-  .button-hover {
+  .seed-container{
     background-color: #925d91;
+    width: 100%;
+    height: 100px;
+    justify-content: center;
+    align-items: center;
   }
+
+  /*모달 창을 가장 위에 배치*/
+  .first-container{
+    z-index: 1000; /*쌓임 순서 지정 숫자가 높을 수록 위에 쌓임*/
+  }
+
+  
