--- a/client/src/components/mainPage/Main.css
+++ b/client/src/components/mainPage/Main.css
@@ -1,106 +1,107 @@
 .mainpage-all-container {
-    display: flex;
-    flex-direction: column;
-    height: 100vh; /* 전체 화면 높이 */
-    overflow-y: auto; /* 섹션 내용이 넘칠 경우 스크롤 생성 */
-  }
+  display: flex;
+  flex-direction: column;
+  height: 100vh; /* 전체 화면 높이 */
+  overflow-y: scroll; /* 섹션 내용이 넘칠 경우 스크롤 생성 */
   
-  /*화면 상단 요소*/
-  .mainpage-top-container {
-    background-color: #f8f9fa; 
-    display: flex;
-    justify-content: left;
-    align-items: center;
-    flex-direction: row; /* 내용 가로 정렬 */
-    height: 70vh; /* 각 섹션의 높이를 화면 높이의 50%로 설정 */
+}
 
-  }
+/*화면 상단 요소*/
+.mainpage-top-container {
+  background-color: #f8f9fa; 
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  flex-direction: row; /* 내용 가로 정렬 */
+  height: 70vh; /* 각 섹션의 높이를 화면 높이의 50%로 설정 */
 
-  .logo-modal-container{
-    position:absolute;
-    top :0px;
-    display: flex;
-    flex-direction: row; /* 내용 가로 정렬 */
-    background-color: #22496f; 
-    width: 100%;
-    align-items: center;
-    padding-left: 100px;
-  }
+}
 
-  .logo-sun-container{
-    margin-right: 160px;
-    margin-left: -80px;
-    background-color: #e6a9e5;
-  }
+.logo-modal-container{
+  position:absolute;
+  top :0px;
+  display: flex;
+  flex-direction: row; /* 내용 가로 정렬 */
+  background-color: #22496f; 
+  width: 100%;
+  align-items: center;
+  padding-left: 100px;
+}
 
-  .cloud-container{
-    position: relative;
-    bottom: -60px;
-    background-color: #e6a9e5;
-    width: 100%;
-    height: 200px;
-  }
+.logo-sun-container{
+  margin-right: 160px;
+  margin-left: -80px;
+  background-color: #e6a9e5;
+}
 
-  .button-hover {
-    background-color: #925d91;
-  }
+.cloud-container{
+  position: relative;
+  bottom: -60px;
+  background-color: #e6a9e5;
+  width: 100%;
+  height: 300px;
+}
 
-  /* 화면 중단 요소 */
-  .mainpage-middle-container {
-    background-color: #e9ecef;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column; 
-    height: 30vh; 
-  }
+.button-hover {
+  background-color: #925d91;
+}
 
-  .bench-container{
-    position:relative;
-    bottom:-15px;
-    background-color: #34506d;
-    width: 100%;
-    height: 150px;
-  }
+/* 화면 중단 요소 */
+.mainpage-middle-container {
+  background-color: #e9ecef;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column; 
+  height: 30vh; 
+}
 
-  /*화면 하단 요소*/
-  .mainpage-bottom-container {
-    background-color: #dee2e6; 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column; 
-    height: 50vh; 
-  }
+.bench-container{
+  position:relative;
+  bottom:-15px;
+  background-color: #34506d;
+  width: 100%;
+  height: 150px;
+}
 
-  .seed-container{
-    background-color: #925d91;
-    width: 100%;
-    height: 100px;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    top: -50px;
-  }
-
-  .sign-container{
-    background-color: #def0a0;
-    width: 100%;
-    height: 200px;
-  }
-
-  /*모달 창을 가장 위에 배치*/
-  .first-container{
-    z-index: 1000; /*쌓임 순서 지정 숫자가 높을 수록 위에 쌓임*/
-  }
-
-  .chick-conainer{
-    background-color: #e6a9e5;
-    position: absolute;
-    bottom: 250px;
-    right:30px;
-    width: 40%;
-    height: 200px;
-  }
-
+/*화면 하단 요소*/
+.mainpage-bottom-container {
+  background-color: #dee2e6; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column; 
+  height: 50vh; 
   
+}
+
+.seed-container{
+  background-color: #925d91;
+  width: 100%;
+  height: 100px;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  top: -50px;
+  
+}
+
+.sign-container{
+  background-color: #def0a0;
+  width: 100%;
+  height: 200px;
+}
+
+/*모달 창을 가장 위에 배치*/
+.first-container{
+  z-index: 1000; /*쌓임 순서 지정 숫자가 높을 수록 위에 쌓임*/
+}
+
+.chick-conainer{
+  background-color: #e6a9e5;
+  position: absolute;
+  bottom: 50px;
+  right:30px;
+  width: 40%;
+  height: 200px;
+}
