--- a/client/src/components/mainPage/seed.css
+++ b/client/src/components/mainPage/seed.css
@@ -9,3 +9,31 @@
   transform: translate(-50%, -50%);
   z-index: 1000;
 }
+
+.seed-list-item {
+  display: flex;
+  align-items: center;
+  gap: 10px; /* 텍스트와 이미지 사이의 간격 */
+  cursor: pointer;
+  padding: 10px;
+}
+
+.seed-list-item:hover {
+  background-color: #A0522D;
+}
+
+.seed-image-container {
+  width: 50px; 
+  height: 50px; 
+  background-color: white; 
+  border: 1px solid #ddd; /* 사각형 테두리 */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.seed-image {
+  max-width: 100%;
+  max-height: 100%;
+}
+
