--- a/client/src/components/mainPage/seed.css
+++ b/client/src/components/mainPage/seed.css
@@ -63,3 +63,24 @@
     opacity: 0;
   }
 }
+
+.seed-planted {
+  animation: plantSeedAnimation 1s ease-in-out forwards;
+}
+
+@keyframes sproutAnimation {
+  from {
+    transform: scale(1);
+    opacity: 0;
+  }
+  to {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+.sprout {
+  width: 50px;
+  animation: sproutAnimation 0.5s ease-in-out forwards;
+}
+
