[CHORE]전반적인 코드 수정 및 씨앗 4단계 상태 추가

--- a/client/src/components/mainPage/seed.css
+++ b/client/src/components/mainPage/seed.css
@@ -82,3 +82,12 @@
   width: 50px;
   animation: sproutAnimation 0.5s ease-in-out forwards;
 }
+
+.reward-tree {
+  width: 100px;
+}
+
+.reward-tree + button {
+  display: block;
+  margin-top: 10px;
+}
