--- a/client/src/components/MyPage/MyPage.css
+++ b/client/src/components/MyPage/MyPage.css
@@ -56,9 +56,10 @@
 
   .profile_input_button{
     position: absolute;
-    width:36%;
-    height:40%;
+    width:20%;
+    height:37%;
     left: 80%;
+    font-size:small;
     background-color: rgb(126, 197, 255);
     color: #FFFFFF; /* 흰색 */
     border: 3px solid  rgb(126, 197, 255);
@@ -87,15 +88,14 @@
   }
   
   .medicine_list{
-    position: absolute;
+    position: relative;
     background-color:#ffffff;
     color: black;
     border: none;
     border-bottom: 3px solid  #8CD7F2;
-    width: 100%;
-    height: 10vh;
-    top:94%;
-    left:1%;
+    width: 110%;
+    height: 8vh;
+    left:-8%;
     text-align:left;
     padding-left: 5%;
     padding-bottom: 5%;
@@ -125,9 +125,9 @@
 
 
   .add_list_button{
-    position: absolute;
+    position: relative;
     left: 45%;
-    bottom: -18%;
+    bottom:-15%;
     cursor: pointer;
   }
 
